Phing release of v160709.39379 with the following changes:
- Updating to latest WPSC and websharks/core.
- Refactor. Now using Simple Expression syntax from websharks/core.
- Adding support for a new `_debug=""` attribute.
- Adding support for arbitrary attributes.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "websharks/if-shortcode",
   "homepage": "https://github.com/websharks/if-shortcode",
-  "description": "[if /] shortcode for WordPress, by WP Sharks™.",
+  "description": "[if] shortcode for WordPress, by WP Sharks™.",
   "keywords": ["websharks", "wpsharks", "if shortcode"],
 
   "type": "project",
